--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import url(componente/acordeon3.css);
 @import url(componente/acordeon1.css);
 @import url(componente/acordeon2.css);
+@import url(componente/prueba.css);
 @import url(componente/2.css);
 @import url(componente/3.css);
 
