--- a/componente/botones.css
+++ b/componente/botones.css
@@ -19,50 +19,53 @@
     transition: all 0.3s ease;
 }
 
-.numeros__item--modi1{
+/* 1# boton */
+.numeros__item--hover{
     border-color: #007bff;
     color: #007bff;
     background-color: transparent;
 }
 
-.numeros__item--modi1:hover{
+.numeros__item--hover:hover{
     background-color: #007bff;
     color: #fff;
 }
 
-
-.numeros__item--modi2{
+/* 2# boton */
+.numeros__item--gradiante_zoom{
    background: var(--contenedor);
    color: var(--titulo);
 }
 
-.numeros__item--modi2:focus{
+.numeros__item--gradiante_zoom:focus{
     font-size: 40px;
     background: var(--gradiante1);
     color: #fff;
     box-shadow: 0 4px 20px var(--color_botones4);
 }
 
-.numeros__item--modi3{
+/* 3# boton */
+.numeros__item--cambio_gradiante{
     border-color: var(--color_botones5); 
     color: var(--color_botones5);
     background: var(--gradiante4);
     box-shadow: 0 4px 15px var(--color_botones1);
 }
 
-.numeros__item--modi3:hover{
+.numeros__item--cambio_gradiante:hover{
     background: var(--gradiante4);
     color: #fff;
     box-shadow: 0 4px 20px var(--color_botones5);
 }
 
 
-.numeros__item--modi4{
+/* 4# boton */
+.numeros__item--efecto{
     color: var(--texto);
     background-color: transparent;
 }
 
-.numeros__item--modi4:hover{
+.numeros__item--efecto:hover{
     box-shadow: 0 0 0 4px var(--titulo), 0 0 0 8px var(--texto);
 }
 
